# code-parsing

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  USAGE.md  application.example.yml  application.yml  benchmark.py  check_toc_format.py  create_sample_pdf.py  debug_pages.py  demo.bat  docker-compose.yml  find_toc.py  fix_compliance.py  main.py  main_old.py  profile_performance.py  pyproject.toml  pytest.ini  quick_start.py  quick_test.py  requirements-async.txt  requirements-dev.txt  requirements.txt  run_tests.py  search.py  search_content.py  setup_dev.py  temp_files.txt  test_fixes.py
assets/: README.md  sample_output.jsonl
benchmarks/: report.md  run_benchmark.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  EXAMPLES.md  SEARCH.md  TROUBLESHOOTING.md  USAGE.md  schema.md
examples/: demo.sh  main_old.py
outputs/: paragraphs.jsonl  parsing_report.json  sample_usb_pd_spec.jsonl  sample_usb_pd_toc.jsonl  toc.jsonl  usb_pd_content.jsonl  usb_pd_spec.jsonl  usb_pd_toc.jsonl  validation_report.xlsx
src/: __init__.py  app.py  async_processor.py  base.py  cache.py  config.py  content_analyzer.py  content_pipeline.py  content_processor.py  exceptions.py  extractor.py  input_validator.py  interfaces.py  logger.py  main.py  models.py  output_writer.py  parallel.py  parser.py  pdf_extractor.py  pdf_loader.py  pdf_parser.py  pdf_processing_orchestrator.py  performance.py  pipeline_orchestrator.py  progress_tracker.py  report_generator.py  search_content.py  writer.py  (+7 more)
(+33 files in other folders)
