[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usb-pd-parser"
version = "1.0.0"
description = "USB Power Delivery Specification Parser"
authors = [{name = "USB PD Parser Contributors"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "PyMuPDF==1.24.9",
    "pdfplumber==0.10.3", 
    "Pydantic==2.5.2",
    "PyYAML==6.0.1",
    "click==8.1.7"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "black==23.11.0",
    "ruff==0.1.6", 
    "mypy==1.7.1",
    "pytest-cov",
    "pre-commit"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]